@@ -100,3 +100,4 @@ RefLtrDoc=Document
 RefLtrErrorCopyFile=Error during copying letter PDF into event 
 RefLtrBackground=Background image
 RefLtrBackgroundHelp=Only PDF files will be use for backgound, and only first on will be use. Link (URL) will be ignore
+RefLtrReadOnly=Read only (chapter invisible during letter edition)
