@@ -101,3 +101,4 @@ RefLtrDoc=Document
 RefLtrErrorCopyFile=Erreur durant la copie du document PDF de la lettre sur l'événement de l'agenda
 RefLtrBackground=Image de fond
 RefLtrBackgroundHelp=Seul les fichiers PDF seront utilisé comme image de fond des courriers généré. Un seul fichier (le premier) sera utilisé. Les liens (URL) seront ignorés
+RefLtrReadOnly=Lecture seul (invisible lors de la création de la lettre)
