@@ -23,6 +23,7 @@ sort_order integer NOT NULL DEFAULT 1,
 title varchar(100) NOT NULL,
 content_text text,
 options_text text,
+readonly integer NOT NULL DEFAULT 0,
 status integer NOT NULL DEFAULT 1,
 import_key varchar(100) NULL,
 fk_user_author	integer	NOT NULL,
